[bdist_wheel]
universal = 0

[flake8]
max-line-length = 100

[metadata]
name = requtests
version = attr: requtests.__version__
author = The Funnel Dev Team
author_email = open-source@funnel.io
description = Test helpers for the requests library.
keywords = ["Requests Testing"]
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown
requires_python = ~=3.8
classifiers =
  Development Status :: 5 - Production/Stable
  License :: OSI Approved :: MIT License
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Programming Language :: Python :: 3.10
  Programming Language :: Python :: 3.11
  Programming Language :: Python :: 3.12
  Topic :: Software Development :: Libraries
project_urls =
  Bug Reports = https://github.com/funnel-io/requtests/issues
  Source = https://github.com/funnel-io/requtests
url = https://github.com/funnel-io/requtests

[options]
install_requires = file: requirements.txt
package_dir =
  =src
packages=find:

[options.packages.find]
where = src
